[project]
name = "robot-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy<2",
    "torch>=2.7.0",
    "transformers==4.40.1",
    "tokenizers==0.19.1",
    "timm==0.9.16",
    "bitsandbytes>=0.45.0",
    "pillow>=10.0.0",
    "pybullet>=3.2.7",
    "pyrealsense2>=2.58.2.10647",
    "xarm-python-sdk>=1.18.4",
    "accelerate==0.32.1",
    "torchvision>=0.22.0",
    "einops>=0.8.2",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
